--- a/main.css
+++ b/main.css
@@ -1,4 +1,39 @@
-body{
+.container {
+    font-family: 'Open Sans', sans-serif;
     margin: 0 auto;
     max-width: 50em;
+    text-align: center;
+    line-height: 1.5;
+    padding: 4em 1em;
+    color: #555;
 }
+
+h1 {
+    margin-top: 1em;
+  padding-top: 1em;
+  color: #333;
+}
+
+h2 {
+    margin-top: 1em;
+    padding-top: 1em;
+    color: #333;
+}
+
+h3 {
+  margin-top: 1em;
+  padding-top: 1em;
+  color: #333;
+}
+
+a {
+    color: #e81c4f;
+}
+strong{
+    color: #cc822e;
+}
+nav {
+    margin: 0px; 
+    padding: 0px; 
+}
+
