--- a/main.css
+++ b/main.css
@@ -1,17 +1,17 @@
-.container {
-    font-family: 'Open Sans', sans-serif;
-    margin: 0 auto;
-    max-width: 50em;
-    text-align: center;
-    line-height: 1.5;
-    padding: 4em 1em;
+body {
+    font-family:Arial, Helvetica, sans-serif;;
     color: #555;
+}
+
+p {
+  margin: 1em;
 }
 
 h1 {
     margin-top: 1em;
   padding-top: 1em;
-  color: #333;
+ 
+  font-family: Arial, Helvetica, sans-serif; color: #333;
 }
 
 h2 {
@@ -26,14 +26,25 @@ h3 {
   color: #333;
 }
 
+
 a {
-    color: #e81c4f;
+    color: green;
 }
+
 strong{
-    color: #cc822e;
+  color: #009dff;
 }
-nav {
-    margin: 0px; 
-    padding: 0px; 
+
+
+.homepage {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  max-width: 50em;
+  text-align: center;
+  line-height: 1.5em;
+  color: #555;
 }
+
+
+
 
